# garmin-tui

./: .enc.env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
garmin_tui/: cli.py
garmin_tui/core/: auth.py  get.py  utils.py
tests/: test_garmin_tui.py
